--- a/views/home.pug
+++ b/views/home.pug
@@ -9,10 +9,10 @@ html
     include includes/headerHome
     main
         section.hero
-          h1 Agenda de Consultorios
+          h1.h1TituloSalud Salud sin complicaciones
           p.subtitle Gestioná tus turnos médicos fácil, rápido y sin llamadas.
           div.heroButtons
-            a.btnPrimary(href="/auth/register") Registrarse
+            a.btnPrimary(href="/auth/login") Iniciar Sesión
         section(class="sectionCarrousel")
           article(class="carrousel")
             img(src="/img/1.jpg", alt="carrousel1" class="carrouselImg" id="imgCarrousel")
