--- a/views/includes/headerHome.pug
+++ b/views/includes/headerHome.pug
@@ -1,5 +1,9 @@
 header
-      a(href="http://localhost:3000/", rel="noopener noreferrer"): img(src="/img/agenda.png", alt="" class="logoHeader")
+      .logoImg
+            a(href="http://localhost:3000/" rel="noopener noreferrer"): img(src="/img/agenda.png" alt="" class="logoHeader")
+            h1.logoTitle Agenda de Consultorios
       nav
-          ul
-              li: a(href="/auth/login") Iniciar Sesión
+            ul
+                  li: a(href="/sobre-nosotros") Sobre Nosotros
+                  li: a(href="/preguntas-frecuentes") Preguntas Frecuentes 
+                  li: a(href="/auth/login") Iniciar Sesión
