--- a/views/paciente/crearPaciente.pug
+++ b/views/paciente/crearPaciente.pug
@@ -1,6 +1,7 @@
 doctype html
 html
     head 
+        link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
         title Crear Paciente
     body 
         h1 Crear Paciente
