--- a/views/paciente/pacienteEditarFoto.pug
+++ b/views/paciente/pacienteEditarFoto.pug
@@ -2,9 +2,10 @@ doctype html
 html
     head
         title Vista Paciente
+        link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
         link(rel="stylesheet" href="/css/headerPaciente.css")
         link(rel="stylesheet" href="/css/pacienteFoto.css")
-        link(rel="stylesheet" href="/css/footer.css")
+        link(rel="stylesheet" href="/css/footerNuevo.css")
     body
         include ../includes/headerPaciente
         h1 ¡Elige tu foto de perfil!
