--- a/views/paciente/pacienteHistorialTurnos.pug
+++ b/views/paciente/pacienteHistorialTurnos.pug
@@ -2,10 +2,11 @@ doctype html
 html
   head
     title Historial de Turnos
+    link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
     link(rel="stylesheet" href="/css/headerPaciente.css")
     link(rel="stylesheet" href="/css/paciente.css")
     link(rel="stylesheet" href="/css/pacienteHome.css")
-    link(rel="stylesheet" href="/css/footer.css")
+    link(rel="stylesheet" href="/css/footerNuevo.css")
   body
     include ../includes/headerPaciente
     main(class="mainPaciente")
