--- a/public/css/paciente.css
+++ b/public/css/paciente.css
@@ -1,6 +1,6 @@
 body {
     background-color: #fbfbfb;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Poppins', sans-serif;
     color: #2c3e50;
     min-height: 100vh;
     display: flex;
@@ -62,19 +62,6 @@ p {
     margin-bottom: 15px;
 }
 
-header {
-    width: 80vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.ulHeader {
-    display: flex;
-    flex-direction: row;
-    gap: 50px;
-}
 
 li {
     list-style-type: none;
