--- a/public/css/pacienteEditar.css
+++ b/public/css/pacienteEditar.css
@@ -1,6 +1,6 @@
 body {
     background-color: #fbfbfb;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Poppins', sans-serif;
     color: #2c3e50;
     min-height: 100vh;
     display: flex;
@@ -12,8 +12,7 @@ body {
     text-align: center;
     color: #2c3e50;
     margin: 40px 0 30px 0;
-    font-size: 2.2rem;
-    font-weight: 700;
+    font-size: 28px;
 }
 
 .sectionPrincipalEditar {
@@ -43,11 +42,13 @@ body {
     gap: 7px;
     width: 100%;
     max-width: 420px;
+    border-radius: 15px;
 }
 
 .campoImg {
     align-items: center;
     margin-bottom: 18px;
+    border-radius: 15px;
 }
 
 .iconEdit {
