--- a/public/css/pacienteFoto.css
+++ b/public/css/pacienteFoto.css
@@ -1,7 +1,7 @@
 body {
     background-color: #fbfbfb;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #2c3e50;
+    font-family: 'Poppins', sans-serif;
+    color: #333;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -10,10 +10,9 @@ body {
 
 h1 {
     text-align: center;
-    color: #2c3e50;
+    color: #333;
     margin: 40px 0 30px 0;
-    font-size: 2.2rem;
-    font-weight: 700;
+    font-size: 28px;
 }
 
 .sectionFoto {
