--- a/views/paciente/pacientePerfil.pug
+++ b/views/paciente/pacientePerfil.pug
@@ -2,9 +2,10 @@ doctype html
 html
   head
     title Vista Paciente
+    link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
     link(rel="stylesheet" href="/css/headerPaciente.css")
     link(rel="stylesheet" href="/css/pacientePerfil.css")
-    link(rel="stylesheet" href="/css/footer.css")
+    link(rel="stylesheet" href="/css/footerNuevo.css")
   body
     include ../includes/headerPaciente
     main(class="mainPacientePerfil")
