--- a/views/secretaria/secretariaTurnos.pug
+++ b/views/secretaria/secretariaTurnos.pug
@@ -13,10 +13,6 @@ html
     form(method="get" action="/turnos/listarTurnos" class="formSecreTurno")
       input(type="text" name="paciente" placeholder="Buscar paciente" class="inputSecreTurno")
       input(type="text" name="profesional" placeholder="Buscar profesional" class="inputSecreTurno")
-      select(name="sucursal" class="selectSecreTurno")
-        option(value="" class="optionSecreTurno") Todas las sucursales
-          each s in sucursales
-            option(value=s.id class="optionSecreTurno" selected=(sucursalUsuario && s.id == sucursalUsuario))= s.nombre
       button(type="submit" class="buttonSecreTurno") Filtrar
     section(class="sectionSecreTurnos")
       if turnos && turnos.length
@@ -32,8 +28,6 @@ html
               th Observación
               th DNI
               th Estado
-              th Acciones
-              th Acciones
               th Acciones
           tbody
             each turno in turnos
@@ -52,11 +46,9 @@ html
                   else
                     p Foto no disponible
                 td= turno.estado
-                td
+                td(class="acciones-cell")
                   a(href=`/turnos/editarTurno/${turno.id}` class="btnEditarSecreTurno") Cambiar estado
-                td
                   a(href=`/turnos/detalles/${turno.id}` class="btnEditarSecreTurno") Detalles
-                td
                   if turno.estado === 'Por reasignar'
                     a(href=`/turnos/reasignar/${turno.id}` class="btnReasignarSecreTurno") Reasignar
                   else
