--- a/views/preguntasFrecuentes.pug
+++ b/views/preguntasFrecuentes.pug
@@ -17,8 +17,8 @@ html
             h3 ¿Necesito crear una cuenta?
             p Sí, para poder reservar turnos es necesario registrarte.
 
-            h3 ¿Puedo cancelar un turno?
-            p Depende de las políticas del consultorio. En general, se puede cancelar con 24 horas de anticipación.
+            h3 ¿Puedo reservar un turno en el horario que quiera?
+            p Depende si hay un espacio disponible en ese horario para ese médico.
         
         p.h1Nosotros Dejanos tus dudas contactandonos a través de nuestro LinkedIn.
     include includes/footer
