--- a/views/paciente/pacienteEditarFoto.pug
+++ b/views/paciente/pacienteEditarFoto.pug
@@ -4,10 +4,20 @@ html
         title Vista Paciente
         link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
         link(rel="stylesheet" href="/css/headerPaciente.css")
+        link(rel="stylesheet" href="/css/alerta.css")
         link(rel="stylesheet" href="/css/pacienteFoto.css")
         link(rel="stylesheet" href="/css/footerNuevo.css")
     body
         include ../includes/headerPaciente
+        if msg == 'ok'
+            div.alert.alert-success
+                span.icon ✓
+                |  Foto de perfil editada exitosamente
+
+        if msg == 'error'
+            div.alert.alert-error
+                span.icon ⚠
+                |  Hubo un error al editar tu foto de perfil
         h1 ¡Elige tu foto de perfil!
         section.sectionFoto
             form.formPerfilFoto(action="/pacientes/foto" method="POST")
@@ -26,3 +36,4 @@ html
                 button.botonEditarFoto(type="submit") Editar
         include ../includes/footer
         script(src="/js/logout.js")
+        script(src="/js/alerta.js")
