--- a/public/css/home.css
+++ b/public/css/home.css
@@ -230,15 +230,59 @@ a:hover {
 }
 
 .containerNosotros{
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
   max-width: 1200px;
   margin: auto;
+  margin-top: 100px;
   padding: 0 20px;
+  align-items: center;
+}
+
+.containerPreguntas{
+  gap: 40px;
+  max-width: 1200px;
+  margin: auto;
+  margin-top: 100px;
+  padding: 0 20px;
+  align-items: center;
 }
 
 .h1Nosotros{
   text-align: center;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
+}
+
+.negrita{
+  font-weight: 600;
+}
+
+.pPreguntas{
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 0px;
+  color: #666;
+}
+
+.pNosotros{
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 60px;
+  color: #666;
+}
+
+
+.preguntas{
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+}
+
+.imgPreguntas{
+  width: 300px;
+  height: 100%;
 }
 
 @media (max-width: 1024px) {
