--- a/views/secretaria/secretariaTurnos.pug
+++ b/views/secretaria/secretariaTurnos.pug
@@ -2,8 +2,9 @@ doctype html
 html
   head
     title Secretaria Panel
+    link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
     link(rel="stylesheet" href="/css/secretariaTurnos.css")
-    link(rel="stylesheet" href="/css/footer.css")
+    link(rel="stylesheet" href="/css/footerNuevo.css")
     link(rel="stylesheet" href="/css/headerSecretaria.css")
     link(rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css")
   body(class="bodySecreTurno")
