estilo secretaria mejorado

--- a/public/css/secretariaTrasladarTurno.css
+++ b/public/css/secretariaTrasladarTurno.css
@@ -1,8 +1,8 @@
 body.secretariaTrasladarTurno {
     background: #fbfbfb;
-    font-family: 'Segoe UI', Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
-    min-height: 100vh;
+    height: 100%;
 }
 
 .mainContent {
