--- a/public/css/secretariaTurnoSuccess.css
+++ b/public/css/secretariaTurnoSuccess.css
@@ -1,6 +1,6 @@
 
 .secretariaTurnoSuccess {
-    min-height: 100vh;
+    height: 100%;
     background: #f8fafc;
     display: flex;
     flex-direction: column;
