--- a/views/secretaria/secretariaCrearAgenda.pug
+++ b/views/secretaria/secretariaCrearAgenda.pug
@@ -2,9 +2,10 @@ doctype html
 html
   head
     title Crear Agenda
+    link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
     link(rel="stylesheet" href="/css/secretariaCrearAgenda.css")
     link(rel="stylesheet" href="/css/headerSecretaria.css")
-    link(rel="stylesheet" href="/css/footer.css")
+    link(rel="stylesheet" href="/css/footerNuevo.css")
     link(rel="stylesheet" href="/css/autocompletar_estilos.css")
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css")
   body
@@ -14,13 +15,13 @@ html
 
       form(action="/agendas/crear" method="POST" class="form-agenda")
         
-        label(for="profesional-search") Seleccionar Profesional:
+        label(for="profesional-search") Buscar Profesional:
         .autocompletar_contenedor
           input(type="text" id="profesional-search" class="autocompletar_input" placeholder="Buscar por apellido o nombre..." autocomplete="off")
           input(type="hidden" name="profesional_especialidad_id" id="profesional-id" required)
 
         
-        label(for="sucursal-search") Seleccionar Sucursal:
+        label(for="sucursal-search") Buscar Sucursal:
         .autocompletar_contenedor
           input(type="text" id="sucursal-search" class="autocompletar_input" placeholder="Buscar por nombre o dirección..." autocomplete="off")
           input(type="hidden" name="sucursal_id" id="sucursal-id" required)
