--- a/views/secretaria/secretariaCrearListaEspera.pug
+++ b/views/secretaria/secretariaCrearListaEspera.pug
@@ -2,8 +2,9 @@ doctype html
 html
   head
     title Secretaria Panel
+    link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
     link(rel="stylesheet" href="/css/secretariaCrearEspera.css")
-    link(rel="stylesheet" href="/css/footer.css")
+    link(rel="stylesheet" href="/css/footerNuevo.css")
     link(rel="stylesheet" href="/css/headerSecretaria.css")
     link(rel="stylesheet" href="/css/autocompletar_estilos.css")
   body(class="bodySecreCrearEspera")
@@ -13,12 +14,12 @@ html
       h2(class="h2SecreCrearEspera") Crear entrada en Lista de Espera
 
       form(action="/secretaria/crearEspera" method="POST" class="formCrearEspera")
-        label(for="paciente_id") Selecciona un Paciente:
+        label(for="paciente_id") Buscar un Paciente:
         .autocompletar_contenedor
           input(type="text" id="paciente-search" class="autocompletar_input" placeholder="Buscar por nombre o DNI..." autocomplete="off")
           input(type="hidden" name="paciente_id" id="paciente-id" required)
 
-        label(for="profesional_especialidad_id") Selecciona un Profesional:
+        label(for="profesional_especialidad_id") Buscar un Profesional:
         .autocompletar_contenedor
           input(type="text" id="profesional-search" class="autocompletar_input" placeholder="Buscar por apellido o nombre..." autocomplete="off")
           input(type="hidden" name="profesional_especialidad_id" id="profesional-id" required)
