--- a/views/secretaria/secretariaEditarTurno.pug
+++ b/views/secretaria/secretariaEditarTurno.pug
@@ -2,8 +2,9 @@ doctype html
 html
   head
     title Editar Turno
+    link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
     link(rel="stylesheet" href="/css/secretariaEditarTurno.css")
-    link(rel="stylesheet" href="/css/footer.css")
+    link(rel="stylesheet" href="/css/footerNuevo.css")
     link(rel="stylesheet" href="/css/secretariaEditarTurno.css")
     link(rel="stylesheet" href="/css/headerSecretaria.css")
 
