--- a/views/secretaria/secretariaGestionAgendas.pug
+++ b/views/secretaria/secretariaGestionAgendas.pug
@@ -2,9 +2,10 @@ doctype html
 html
   head
     title Gestión de Agendas
+    link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
     link(rel="stylesheet" href="/css/secretariaGestionAgendas.css")
     link(rel="stylesheet" href="/css/headerSecretaria.css")
-    link(rel="stylesheet" href="/css/footer.css")
+    link(rel="stylesheet" href="/css/footerNuevo.css")
   body
     include ../includes/headerSecretaria
     main.main-gestion-agendas
