--- a/views/secretaria/secretariaGestionTurno.pug
+++ b/views/secretaria/secretariaGestionTurno.pug
@@ -2,8 +2,9 @@ doctype html
 html
   head
     title Secretaria Panel
+    link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
     link(rel="stylesheet" href="/css/secretariaGestionTurno.css")
-    link(rel="stylesheet" href="/css/footer.css")
+    link(rel="stylesheet" href="/css/footerNuevo.css")
     link(rel="stylesheet" href="/css/headerSecretaria.css")
     link(rel="stylesheet" href="/css/autocompletar_estilos.css")
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css")
@@ -12,11 +13,11 @@ html
     main(class="mainSecreGestionTurno")
       h2 Crear Turno
       form(action="/turnos/crear" method="POST" class="formTurnos" enctype="multipart/form-data") 
-        h3 Selecciona un Profesional
+        h3 Buscar un Profesional
         .autocompletar_contenedor
           input(type="text" id="profesional-search" class="autocompletar_input" placeholder="Buscar por apellido o nombre..." autocomplete="off")
           input(type="hidden" name="profesional_especialidad_id" id="profesional-id" required)
-        h3 Selecciona un paciente
+        h3 Buscar un paciente
         .autocompletar_contenedor
           input(type="text" id="paciente-search" class="autocompletar_input" placeholder="Buscar por nombre o DNI..." autocomplete="off")
           input(type="hidden" name="paciente_id" id="paciente-id" required)
