--- a/views/secretaria/secretariaTrasladar.pug
+++ b/views/secretaria/secretariaTrasladar.pug
@@ -2,8 +2,9 @@ doctype html
 html(lang="es")
     head
         title Secretaria - Trasladar
+        link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
         link(rel="stylesheet" href="/css/secretariaGestionTurno.css")
-        link(rel="stylesheet" href="/css/footer.css")
+        link(rel="stylesheet" href="/css/footerNuevo.css")
         link(rel="stylesheet" href="/css/headerSecretaria.css")
         link(rel="stylesheet" href="/css/secretariaTrasladarTurno.css")
         link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css")
