--- a/public/css/secretariaCrearAusencia.css
+++ b/public/css/secretariaCrearAusencia.css
@@ -1,11 +1,12 @@
 body {
   background-color: #fbfbfb;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: #2c3e50;
-  min-height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0;
 }
 
 .mainCrearAusencia {
