--- a/public/css/secretariaCrearEspera.css
+++ b/public/css/secretariaCrearEspera.css
@@ -1,12 +1,13 @@
 
 .bodySecreCrearEspera {
   background-color: #fbfbfb;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: #2c3e50;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0;
 }
 
 .mainSecreCrearEspera {
