--- a/public/css/secretariaEditarTurno.css
+++ b/public/css/secretariaEditarTurno.css
@@ -3,14 +3,19 @@ body, h1, h3, p, select, input, textarea, button, label {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Poppins', sans-serif;
+}
+
+body{
+    height: 100%;
+    margin: 0;
 }
 
 
 .secretariaEditarTurno {
     background: #fbfbfb;
     color: #333;
-    min-height: 100vh;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
