--- a/public/css/secretariaGestionTurno.css
+++ b/public/css/secretariaGestionTurno.css
@@ -3,17 +3,18 @@ body, h1, h3, p, select, input, textarea, button, label {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 /* Fondo general */
 body {
   background: #fbfbfb;
   color: #333;
-  min-height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0;
 }
 
 .mainSecreGestionTurno {
