--- a/public/css/secretariaTurnos.css
+++ b/public/css/secretariaTurnos.css
@@ -2,12 +2,12 @@
 .bodySecreTurno {
   background-color: #f9f9f9;
   color: #333;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  min-height: 100vh;
+  font-family: 'Poppins', sans-serif;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  margin: 0;
 }
 
 
