--- a/views/secretaria/secretariaListaEspera.pug
+++ b/views/secretaria/secretariaListaEspera.pug
@@ -2,8 +2,9 @@ doctype html
 html
   head
     title Lista de Espera
+    link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
     link(rel='stylesheet', href='/css/secretariaListarEspera.css')
-    link(rel='stylesheet', href='/css/footer.css')
+    link(rel='stylesheet', href='/css/footerNuevo.css')
     link(rel='stylesheet', href='/css/headerSecretaria.css')
     link(rel='stylesheet', href='https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css')
   body(class="bodySecreListaEspera")
