--- a/views/secretaria/secretariaTurnoSuccess.pug
+++ b/views/secretaria/secretariaTurnoSuccess.pug
@@ -2,9 +2,10 @@ doctype html
 html
   head
     title Secretaria Panel
+    link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
     link(rel="stylesheet" href="/css/secretariaGestionTurno.css")
     link(rel="stylesheet" href="/css/secretariaTurnoSuccess.css")
-    link(rel="stylesheet" href="/css/footer.css")
+    link(rel="stylesheet" href="/css/footerNuevo.css")
     link(rel="stylesheet" href="/css/headerSecretaria.css")
   body(class="secretariaTurnoSuccess")
     include ../includes/headerSecretaria
